# edu-sphere

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
edu/: models.py  paginators.py  permissions.py  serializers.py  service.py  tasks.py  tests.py  urls.py  validators.py  views.py
edu/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_course_options_alter_lesson_options.py  0005_alter_lesson_course.py  0006_course_updated_at.py  0007_alter_course_updated_at.py  0008_alter_course_updated_at.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: check_payments.py  fill.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_payment.py  0004_alter_payment_date.py  0005_alter_payment_options.py  0006_alter_payment_date.py  0007_alter_payment_date.py  0008_rename_payment_amount_payment_amount_and_more.py  0009_alter_user_options_payment_link_payment_session_id.py  0010_alter_payment_date.py  0011_alter_payment_session_id.py  0012_alter_payment_user.py  0013_alter_payment_options.py
